--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "postinstall": "prisma generate",
     "migrate": "tsx scripts/run-migration.ts",
     "create-admin": "tsx scripts/create-admin.ts",
     "validate-migration": "tsx scripts/validate-migration.ts",
