Add effect dependency for Prisma 7 config

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.4",
+    "effect": "^3.19.16",
     "jspdf": "^4.1.0",
     "lucide-react": "^0.563.0",
     "mariadb": "^3.4.5",
